update to frontend

--- a/Function_testing.ipynb
+++ b/Function_testing.ipynb
@@ -6,8 +6,8 @@
    "id": "4386686d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-15T13:38:31.019082Z",
-     "start_time": "2021-06-15T13:38:30.812641Z"
+     "end_time": "2021-06-16T08:19:45.538197Z",
+     "start_time": "2021-06-16T08:19:45.283670Z"
     }
    },
    "outputs": [],
@@ -17,27 +17,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "919d86c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-14T10:43:28.278849Z",
-     "start_time": "2021-06-14T10:43:27.626733Z"
+     "end_time": "2021-06-16T08:19:54.073747Z",
+     "start_time": "2021-06-16T08:19:53.280958Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielmarron/.pyenv/versions/le_kingmakers/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3169: DtypeWarning: Columns (1,4,5,6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv('for_streamlit.csv')"
+    "df = pd.read_csv('tweets_large_ammended.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "id": "c86092d0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-14T11:21:46.307882Z",
-     "start_time": "2021-06-14T11:21:46.297137Z"
+     "end_time": "2021-06-16T08:20:18.064639Z",
+     "start_time": "2021-06-16T08:20:18.056383Z"
     }
    },
    "outputs": [],
@@ -49,7 +58,7 @@
     "    '''\n",
     "        \n",
     "    def get_data(self):\n",
-    "        return pd.read_csv('for_streamlit.csv')\n",
+    "        return pd.read_csv('tweets_large_ammended.csv')\n",
     "\n",
     "    #choose figure\n",
     "    def by_figure(self, figure_twitter_handle, start = '2021-01-01', finish = '2021-06-01'):\n",
@@ -70,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "id": "3a001466",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-14T11:21:46.455648Z",
-     "start_time": "2021-06-14T11:21:46.453796Z"
+     "end_time": "2021-06-16T08:20:19.320305Z",
+     "start_time": "2021-06-16T08:20:19.316580Z"
     }
    },
    "outputs": [],
@@ -85,33 +94,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 11,
    "id": "f68cd50a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-14T11:21:47.131589Z",
-     "start_time": "2021-06-14T11:21:46.605359Z"
+     "end_time": "2021-06-16T08:20:20.432816Z",
+     "start_time": "2021-06-16T08:20:19.578046Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielmarron/.pyenv/versions/le_kingmakers/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (1,4,5,6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "pritipatel = Tweets().by_figure('pritipatel', start = start).head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "id": "799dcd1a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-14T11:21:02.964528Z",
-     "start_time": "2021-06-14T11:21:02.484681Z"
+     "end_time": "2021-06-16T08:20:22.251398Z",
+     "start_time": "2021-06-16T08:20:21.427864Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielmarron/.pyenv/versions/le_kingmakers/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (1,4,5,6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "matthancock = Tweets().by_figure('matthancock', start=start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e26a0321",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-16T08:20:39.167064Z",
+     "start_time": "2021-06-16T08:20:39.162658Z"
     }
    },
    "outputs": [],
    "source": [
-    "matthancock = Tweets().by_figure('matthancock', start=start)"
+    "figures = ['matthancock','pritipatel']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "12d965c5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-16T08:31:18.039907Z",
+     "start_time": "2021-06-16T08:31:17.987277Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 12)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['figure']=='kierstarmer'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "336c7841",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
